--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "public-components",
+  "name": "itomix-public-components",
   "version": "1.0.0",
   "description": "公用组件库",
   "main": "index.js",
